Really basic camera create and updae

--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -6,7 +6,7 @@
   <ul>
     {% for object in object_list %}
       <li>
-        <a href="{{ object.get_absolute_url }} {{ object.id }}">{{ object }}</a>
+        <a href="{{ object.get_absolute_url }}">{{ object }}</a>
       </li>
     {% endfor %}
   </ul>
