Ease the styling

--- a/schema/templates/base_generic.html
+++ b/schema/templates/base_generic.html
@@ -1,3 +1,9 @@
+<head>
+    {% block title %}<title>PhotoDB</title>{% endblock %}
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+</head>
+
 {% block content %}{% endblock %}
   
   {% block pagination %}
