Add styling to index

--- a/schema/templates/schema/index.html
+++ b/schema/templates/schema/index.html
@@ -1,3 +1,7 @@
+{% extends "base_generic.html" %}
+
+{% block content %}
 <h1>PhotoDB</h1>
-<p>This is how the index page will look</p>
+<p>Please use the navigation on the left</p>
 <p>Visit the <a href="/admin">admin page</a></p>
+{% endblock %}
