--- a/schema/templates/schema/update.html
+++ b/schema/templates/schema/update.html
@@ -1,4 +1,8 @@
+{% extends "base_generic.html" %}
+
+{% block content %}
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Update">
 </form>
+{% endblock %}
