--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -1,7 +1,8 @@
 {% extends "base_generic.html" %}
+{% load model_name %}
 
 {% block content %}
-  <h1>Object List</h1>
+  <h1>{{ view.model | verbose_name_plural | title }}</h1>
   {% if object_list %}
   <ul>
     {% for object in object_list %}
