Improve title format

--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -1,7 +1,8 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Camera: {{ object }}</h1>
+  <h1>Cameras</h1>
+  <h2>{{ object }}</h2>
 
 
   <p><strong>Model:</strong> {{ object.cameramodel }}</p>
