--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -7,4 +7,8 @@
 
   <p><strong>Model:</strong> {{ object.cameramodel }}</p>
   <p><strong>Introduced:</strong> {{object.cameramodel.introduced }}</p>
+
+
+  <p><a href="{% url 'camera-update' object.id %}">Update</a></p>
+
 {% endblock %}
