Abstract out template headings

--- a/schema/templates/schema/battery_detail.html
+++ b/schema/templates/schema/battery_detail.html
@@ -1,7 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "schema/detail.html" %}
 
 {% block content %}
-  <h1>Batteries</h1>
-  <h2>{{ object }}</h2>
-  
 {% endblock %}
