--- a/schema/templates/base_generic.html
+++ b/schema/templates/base_generic.html
@@ -52,7 +52,11 @@
                 </ul>
             {% endblock %}
         </div>
-    <div class="col-sm-10 ">{% block content %}<!-- default content text (typically empty) -->{% endblock %}</div>
+    <div class="col-sm-10 ">
+        {% block heading %}{% endblock %}
+        {% block subheading %}{% endblock %}
+        {% block content %}<!-- default content text (typically empty) -->{% endblock %}
+    </div>
 
     {% block pagination %}
       {% if is_paginated %}
