--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -1,7 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "schema/detail.html" %}
 
 {% block content %}
-  <h1>Accessories</h1>
-  <h2>{{ object }}</h2>
-
 {% endblock %}
