--- a/schema/templates/schema/index.html
+++ b/schema/templates/schema/index.html
@@ -1,7 +1,8 @@
 {% extends "base_generic.html" %}
 
+{% block heading %}<h1>PhotoDB</h1>{%endblock%}
+
 {% block content %}
-<h1>PhotoDB</h1>
 <p>Please use the navigation on the left</p>
 <p>Visit the <a href="/admin">admin page</a></p>
 {% endblock %}
