--- a/schema/templates/schema/negativesize_detail.html
+++ b/schema/templates/schema/negativesize_detail.html
@@ -1,6 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "schema/detail.html" %}
 
 {% block content %}
-  <h1>Negative sizes</h1>
-  <h2>{{ object }}</h2>
 {% endblock %}
