--- a/schema/templates/base_generic.html
+++ b/schema/templates/base_generic.html
@@ -56,6 +56,7 @@
         {% block heading %}{% endblock %}
         {% block subheading %}{% endblock %}
         {% block content %}<!-- default content text (typically empty) -->{% endblock %}
+        {% block actions %}{% endblock %}
     </div>
 
     {% block pagination %}
