--- a/schema/templates/schema/detail.html
+++ b/schema/templates/schema/detail.html
@@ -4,3 +4,13 @@
 {% block heading %}<h1>{{ view.model | verbose_name_plural | title }}</h1>{%endblock%}
 
 {% block subheading %}<h2>{{ object }}</h2>{%endblock%}
+
+{% block content %}{%endblock%}
+
+{% block actions %}
+<h3>Actions</h3>
+<ul>
+<li><a href="{{ object.get_absolute_url }}/update">Edit</a></li>
+{% block moreactions %}{%endblock%}
+</ul>
+{%endblock%}
