--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -1,4 +1,182 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
+<table>
+  <tr>
+    <th>Mount</th>
+    <td>{{ object.mount }}</td>
+  </tr>
+  <tr>
+    <th>Format</th>
+    <td>{{ object.format }}</td>
+  </tr>
+  <tr>
+    <th>Focus type</th>
+    <td>{{ object.focus_type }}</td>
+  </tr>
+  <tr>
+    <th>Metering</th>
+    <td>{{ object.metering }}</td>
+  </tr>
+  <tr>
+    <th>Coupled metering</th>
+    <td>{{ object.coupled_metering }}</td>
+  </tr>
+  <tr>
+    <th>Metering type</th>
+    <td>{{ object.metering_type }}</td>
+  </tr>
+  <tr>
+    <th>Introduced</th>
+    <td>{{ object.introduced }}</td>
+  </tr>
+  <tr>
+    <th>Discontinued</th>
+    <td>{{ object.discontinued }}</td>
+  </tr>
+  <tr>
+    <th>Body type</th>
+    <td>{{ object.body_type }}</td>
+  </tr>
+  <tr>
+    <th>Weight</th>
+    <td>{{ object.weight }}</td>
+  </tr>
+  <tr>
+    <th>Introduced</th>
+    <td>{{ object.introduced }}</td>
+  </tr>
+  <tr>
+    <th>Discontinued</th>
+    <td>{{ object.discontinued }}</td>
+  </tr>
+  <tr>
+    <th>Negative size</th>
+    <td>{{ object.negative_size }}</td>
+  </tr>
+  <tr>
+    <th>Shutter type</th>
+    <td>{{ object.shutter_type }}</td>
+  </tr>
+  <tr>
+    <th>Shutter model</th>
+    <td>{{ object.shutter_model }}</td>
+  </tr>
+  <tr>
+    <th>Cable release</th>
+    <td>{{ object.cable_release }}</td>
+  </tr>
+  <tr>
+    <th>Viewfinder coverage</th>
+    <td>{{ object.viewfinder_coverage }}</td>
+  </tr>
+  <tr>
+    <th>Power drive</th>
+    <td>{{ object.power_drive }}</td>
+  </tr>
+  <tr>
+    <th>Continuous fps</th>
+    <td>{{ object.continuous_fps }}</td>
+  </tr>
+  <tr>
+    <th>Fixed mount</th>
+    <td>{{ object.fixed_mount }}</td>
+  </tr>
+  <tr>
+    <th>Lens model</th>
+    <td>{{ object.lensmodel }}</td>
+  </tr>
+  <tr>
+    <th>Battery quantity</th>
+    <td>{{ object.battery_qty }}</td>
+  </tr>
+  <tr>
+    <th>Battery type</th>
+    <td>{{ object.battery_type }}</td>
+  </tr>
+  <tr>
+    <th>Notes</th>
+    <td>{{ object.notes }}</td>
+  </tr>
+  <tr>
+    <th>Bulb</th>
+    <td>{{ object.bulb }}</td>
+  </tr>
+  <tr>
+    <th>Time</th>
+    <td>{{ object.time }}</td>
+  </tr>
+  <tr>
+    <th>Min ISO</th>
+    <td>{{ object.min_iso }}</td>
+  </tr>
+  <tr>
+    <th>Max ISO</th>
+    <td>{{ object.max_iso }}</td>
+  </tr>
+  <tr>
+    <th>Autofocus points</th>
+    <td>{{ object.af_points }}</td>
+  </tr>
+  <tr>
+    <th>Internal flash</th>
+    <td>{{ object.int_flash }}</td>
+  </tr>
+  <tr>
+    <th>Internal flash guide number</th>
+    <td>{{ object.int_flash_gn }}</td>
+  </tr>
+  <tr>
+    <th>External flash</th>
+    <td>{{ object.ext_flash }}</td>
+  </tr>
+  <tr>
+    <th>Flash metering</th>
+    <td>{{ object.flash_metering }}</td>
+  </tr>
+  <tr>
+    <th>PC sync</th>
+    <td>{{ object.pc_sync }}</td>
+  </tr>
+  <tr>
+    <th>Hotshoe</th>
+    <td>{{ object.hotshoe }}</td>
+  </tr>
+  <tr>
+    <th>Coldshoe</th>
+    <td>{{ object.coldshoe }}</td>
+  </tr>
+  <tr>
+    <th>Meter min EV</th>
+    <td>{{ object.meter_min_ev }}</td>
+  </tr>
+  <tr>
+    <th>Meter max EV</th>
+    <td>{{ object.meter_max_ev }}</td>
+  </tr>
+  <tr>
+    <th>DoF preview</th>
+    <td>{{ object.dof_preview }}</td>
+  </tr>
+  <tr>
+    <th>Tripod</th>
+    <td>{{ object.tripod }}</td>
+  </tr>
+  <tr>
+    <th>Shutter speeds</th>
+    <td>{{ object.shutter_speeds }}</td>
+  </tr>
+  <tr>
+    <th>Metering modes</th>
+    <td>{{ object.metering_modes }}</td>
+  </tr>
+  <tr>
+    <th>Exposure programs</th>
+    <td>{{ object.exposure_programs }}</td>
+  </tr>
+  <tr>
+    <th>Series</th>
+    <td>{{ object.series }}</td>
+  </tr>
+</table>
 {% endblock %}
