--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -1,4 +1,42 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
+<table>
+  <tr>
+    <th>Accessory type</th>
+    <td>{{ object.type }}</td>
+  </tr>
+  <tr>
+    <th>Manufacturer</th>
+    <td>{{ object.manufacturer }}</td>
+  </tr>
+  <tr>
+    <th>Model</th>
+    <td>{{ object.model }}</td>
+  </tr>
+  <tr>
+    <th>Acquired</th>
+    <td>{{ object.acquired }}</td>
+  </tr>
+  <tr>
+    <th>Cost</th>
+    <td>{{ object.cost }}</td>
+  </tr>
+  <tr>
+    <th>Lost</th>
+    <td>{{ object.lost }}</td>
+  </tr>
+  <tr>
+    <th>Lost price</th>
+    <td>{{ object.lost_price }}</td>
+  </tr>
+  <tr>
+    <th>Camera model compatibility</th>
+    <td>{{ object.camera_model_compatibility }}</td>
+  </tr>
+  <tr>
+    <th>Lens model compatibility</th>
+    <td>{{ object.lens_model_compatibility }}</td>
+  </tr>
+</table>
 {% endblock %}
