--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -1,4 +1,30 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
+<table>
+  <tr>
+    <th>Name</th>
+    <td>{{ object.name }}</td>
+  </tr>
+  <tr>
+    <th>Manufacturer</th>
+    <td>{{ object.manufacturer }}</td>
+  </tr>
+  <tr>
+    <th>ISO</th>
+    <td>{{ object.iso }}</td>
+  </tr>
+  <tr>
+    <th>Colour</th>
+    <td>{{ object.colour }}</td>
+  </tr>
+  <tr>
+    <th>Panchromatic</th>
+    <td>{{ object.panchromatic }}</td>
+  </tr>
+  <tr>
+    <th>Process</th>
+    <td>{{ object.process }}</td>
+  </tr>
+</table>
 {% endblock %}
