--- a/schema/templates/schema/filter_detail.html
+++ b/schema/templates/schema/filter_detail.html
@@ -1,4 +1,30 @@
 {% extends "schema/detail.html" %}
 
 {% block content %}
+<table>
+  <tr>
+    <th>Type</th>
+    <td>{{ object.type }}</td>
+  </tr>
+  <tr>
+    <th>Thread diameter</th>
+    <td>{{ object.thread }}</td>
+  </tr>
+  <tr>
+    <th>Attenuation</th>
+    <td>{{ object.attenuation }}</td>
+  </tr>
+  <tr>
+    <th>Quantity</th>
+    <td>{{ object.qty }}</td>
+  </tr>
+  <tr>
+    <th>Manufacturer</th>
+    <td>{{ object.manufacturer }}</td>
+  </tr>
+  <tr>
+    <th>Owner</th>
+    <td>{{ object.owner }}</td>
+  </tr>
+</table>
 {% endblock %}
