--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -12,6 +12,6 @@
     {% endfor %}
   </ul>
   {% else %}
-    <p>There are no objects in the list.</p>
+    <p>There are no objects in the list. <a href="{{ request.path }}create">Add one</a> now!</p>
   {% endif %}       
 {% endblock %}
