--- a/schema/templates/schema/update.html
+++ b/schema/templates/schema/update.html
@@ -1,4 +1,9 @@
 {% extends "base_generic.html" %}
+{% load model_name %}
+
+{% block heading %}<h1>{{ view.model | verbose_name_plural | title }}</h1>{%endblock%}
+
+{% block subheading %}<h2>{{ object }}</h2>{%endblock%}
 
 {% block content %}
 <form method="post">{% csrf_token %}
