Skeleton inlines for #123

--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -99,4 +99,22 @@
     <td>{{ object.owner }}</td>
   </tr>
 </table>
+
+<div style="margin-left:20px;margin-top:20px">
+  <h4>Negatives</h4>
+  <table>
+    <tr>
+      <th>Frame</th>
+      <th>Caption</th>
+      <th>Date</th>
+    </tr>
+    {% for negative in film.negative_set.all %}
+    <tr>
+      <td>{{ negative.frame }}</td>
+      <td>{{ negative.caption }}</td>
+      <td>{{ negative.date }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %}
