--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -179,4 +179,48 @@
     <td>{{ object.series }}</td>
   </tr>
 </table>
+
+<div style="margin-left:20px;margin-top:20px">
+  <h4>Cameras</h4>
+  <table>
+    <tr>
+      <th>Serial</th>
+      <th>Acquired</th>
+      <th>cost</th>
+      <th>serial</th>
+      <th>datecode</th>
+      <th>manufactured</th>
+      <th>own</th>
+      <th>lens</th>
+      <th>notes</th>
+      <th>lost</th>
+      <th>lost_price</th>
+      <th>source</th>
+      <th>condition</th>
+      <th>condition_notes</th>
+      <th>display_lens</th>
+      <th>owner</th>
+    </tr>
+    {% for camera in cameramodel.camera_set.all %}
+    <tr>
+      <td>{{ camera.serial }}</td>
+      <td>{{ camera.acquired }}</td>
+      <td>{{ camera.cost }}</td>
+      <td>{{ camera.serial }}</td>
+      <td>{{ camera.datecode }}</td>
+      <td>{{ camera.manufactured }}</td>
+      <td>{{ camera.own }}</td>
+      <td>{{ camera.lens }}</td>
+      <td>{{ camera.notes }}</td>
+      <td>{{ camera.lost }}</td>
+      <td>{{ camera.lost_price }}</td>
+      <td>{{ camera.source }}</td>
+      <td>{{ camera.condition }}</td>
+      <td>{{ camera.condition_notes }}</td>
+      <td>{{ camera.display_lens }}</td>
+      <td>{{ camera.owner }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %}
