Add descriptions at top of web pages for #126

--- a/schema/templates/schema/create.html
+++ b/schema/templates/schema/create.html
@@ -1,7 +1,6 @@
 {% extends "base_generic.html" %}
-{% load model_name %}
 
-{% block heading %}<h1>{{ view.model | verbose_name_plural | title }}</h1>{%endblock%}
+{% block heading %}{% include "heading.html" %}{%endblock%}
 
 {% block subheading %}<h2>Add new</h2>{%endblock%}
 
