--- a/schema/templates/schema/detail.html
+++ b/schema/templates/schema/detail.html
@@ -1,16 +1,15 @@
 {% extends "base_generic.html" %}
-{% load model_name %}
 
-{% block heading %}<h1>{{ view.model | verbose_name_plural | title }}</h1>{%endblock%}
+{% block heading %}{% include "heading.html" %}{%endblock%}
 
 {% block subheading %}<h2>{{ object }}</h2>{%endblock%}
 
 {% block content %}{%endblock%}
 
 {% block actions %}
-<h3>Actions</h3>
-<ul>
-<li><a href="{{ object.get_absolute_url }}/update">Edit</a></li>
-{% block moreactions %}{%endblock%}
-</ul>
+  <h3>Actions</h3>
+  <ul>
+    <li><a href="{{ object.get_absolute_url }}/update">Edit</a></li>
+    {% block moreactions %}{%endblock%}
+  </ul>
 {%endblock%}
