--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -1,8 +1,8 @@
 {% extends "base_generic.html" %}
-{% load model_name %}
+
+{% block heading %}{% include "heading.html" %}{%endblock%}
 
 {% block content %}
-  <h1>{{ view.model | verbose_name_plural | title }}</h1>
   {% if object_list %}
   <ul>
     {% for object in object_list %}
