--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -1,16 +1,11 @@
 {% extends "base_generic.html" %}
+{% load render_table from django_tables2 %}
 
 {% block heading %}{% include "heading.html" %}{%endblock%}
 
 {% block content %}
   {% if object_list %}
-  <ul>
-    {% for object in object_list %}
-      <li>
-        <a href="{{ object.get_absolute_url }}">{{ object }}</a>
-      </li>
-    {% endfor %}
-  </ul>
+    {% render_table object_list %}
   {% else %}
     <p>There are no objects in the list. <a href="{{ request.path }}create">Add one</a> now!</p>
   {% endif %}       
