--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
   {% if object_list %}
-    {% render_table object_list %}
+    {% render_table table %}
   {% else %}
     <p>There are no objects in the list. <a href="{{ request.path }}create">Add one</a> now!</p>
   {% endif %}       
