--- a/schema/templates/schema/list.html
+++ b/schema/templates/schema/list.html
@@ -5,6 +5,7 @@
 
 {% block content %}
   {% if object_list %}
+    <p><a href="{{ request.path }}create">Add</a></p>
     {% render_table table %}
   {% else %}
     <p>There are no objects in the list. <a href="{{ request.path }}create">Add one</a> now!</p>
