--- a/schema/templates/base_generic.html
+++ b/schema/templates/base_generic.html
@@ -14,6 +14,14 @@
         <div class="row">
             <div class="col-sm-2">
             {% block sidebar %}
+            {% if user.is_authenticated %}
+            <p>You are logged in as {{ user.username }}.
+                <a href="{% url 'logout' %}">Logout</a></p>
+            {% else %}
+            <p>You are not logged in.
+                <a href="{% url 'login' %}">Login</a></p>
+            {% endif %}
+            <hr />
             <!-- insert default navigation text for every page -->
                 <ul class="sidebar-nav">
                     <li><a href="{% url 'index' %}">Home</a></li>
