--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,4 +9,5 @@
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+<p>No account? <a href="{% url 'signup' %}">Sign up</a></Sign> now</p>
 {% endblock %}
