Reformat using a table

--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -3,25 +3,77 @@
 {% block content %}
 <h3>Your camera</h3>
 
-<p><strong>Acquired:</strong> {{ object.acquired }}</p>
-<p><strong>Cost:</strong> {{ object.cost }}</p>
-<p><strong>Serial:</strong> {{ object.serial }}</p>
-<p><strong>Datecode:</strong> {{ object.datecode }}</p>
-<p><strong>Manufactured:</strong> {{ object.manufactured }}</p>
-<p><strong>Own:</strong> {{ object.own }}</p>
-<p><strong>Lens:</strong> {{ object.lens }}</p>
-<p><strong>Notes:</strong> {{ object.notes }}</p>
-<p><strong>Lost:</strong> {{ object.lost }}</p>
-<p><strong>Lost price:</strong> {{ object.lost_price }}</p>
-<p><strong>Source:</strong> {{ object.source }}</p>
-<p><strong>Condition:</strong> {{ object.condition }}</p>
-<p><strong>Condition notes:</strong> {{ object.condition_notes }}</p>
-<p><strong>Display lens:</strong> {{ object.display_lens }}</p>
+<table>
+    <tr>
+        <th>Acquired</th>
+        <td>{{ object.acquired }}</td>
+    </tr>
+    <tr>
+        <th>Cost</th>
+        <td>{{ object.cost }}</td>
+    </tr>
+    <tr>
+        <th>Serial</th>
+        <td>{{ object.serial }}</td>
+    </tr>
+    <tr>
+        <th>Datecode</th>
+        <td>{{ object.datecode }}</td>
+    </tr>
+    <tr>
+        <th>Manufactured</th>
+        <td>{{ object.manufactured }}</td>
+    </tr>
+    <tr>
+        <th>Own</th>
+        <td>{{ object.own }}</td>
+    </tr>
+    <tr>
+        <th>Lens</th>
+        <td>{{ object.lens }}</td>
+    </tr>
+    <tr>
+        <th>Notes</th>
+        <td>{{ object.notes }}</td>
+    </tr>
+    <tr>
+        <th>Lost</th>
+        <td>{{ object.lost }}</td>
+    </tr>
+    <tr>
+        <th>Lost price</th>
+        <td>{{ object.lost_price }}</td>
+    </tr>
+    <tr>
+        <th>Source</th>
+        <td>{{ object.source }}</td>
+    </tr>
+    <tr>
+        <th>Condition</th>
+        <td>{{ object.condition }}</td>
+    </tr>
+    <tr>
+        <th>Condition notes</th>
+        <td>{{ object.condition_notes }}</td>
+    </tr>
+    <tr>
+        <th>Display lens</th>
+        <td>{{ object.display_lens }}</td>
+    </tr>
+</table>
 
 <h3>The camera model</strong></h3>
 
-<p><strong>Camera model:</strong> {{ object.cameramodel }}</p>
-<p><strong>Introduced:</strong> {{object.cameramodel.introduced }}</p>
+<table>
+    <tr>
+        <th>Camera model</th>
+        <td>{{ object.cameramodel }}</td>
+    </tr>
+    <tr>
+        <th>Introduced</th>
+        <td>{{object.cameramodel.introduced }}</td>
+    </tr>
+</table>
 {% endblock %}
 
 {% block moreactions %}
