--- a/schema/templates/schema/format_detail.html
+++ b/schema/templates/schema/format_detail.html
@@ -8,7 +8,7 @@
   </tr>
   <tr>
     <th>Negative size</th>
-    <td>{{ object.negative_size }}</td>
+    <td>{{ object.negative_size.all|join:", " }}</td>
   </tr>
 </table>
 {% endblock %}
