--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -40,7 +40,7 @@
   </tr>
   <tr>
     <th>Toner</th>
-    <td>{{ object.toner }}</td>
+    <td>{{ object.toner.all|join:", " }}</td>
   </tr>
   <tr>
     <th>Own</th>
